feat: add logic to get category by id
